update paper + minor fixes

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,17 +1,77 @@
-\section*{References}
+@book{belanger_microsimulation_2017,
+	series = {The {Springer} {Series} on {Demographic} {Methods} and {Population} {Analysis}},
+	title = {Microsimulation and {Population} {Dynamics}: {An} {Introduction} to {Modgen} 12},
+	isbn = {9783319446622},
+	shorttitle = {Microsimulation and {Population} {Dynamics}},
+	url = {https://www.springer.com/gp/book/9783319446622},
+	abstract = {This book is a practical, step-by-step introduction to microsimulation in demography. It shows how to use Modgen, a powerful and free microsimulation platform built by Statistics Canada. The authors' hands-on explanation of model development will help readers make their own. The book teaches how to create and run a simple cohort model with a single fixed-rate event, and builds upon this concept. It introduces how to develop both a single state life table as well as a multiple increment-decrement life table using the tools provided by Modgen. The authors illustrate how to easily upgrade an existing model by adding new modules and new dimensions as determinants of a risk already modeled. The integration of a fertility module and a base population allows the user to bring new actors into the simulation and transform a cohort-based model into a population-based one. The final addition of an international migration module allows the user to accomplish fully open, multi-regional projections. This accessible introduction will be of interest to researchers and students in population studies and other social sciences. It will also appeal to anyone interested in the computational modeling of population dynamics.},
+	language = {en},
+	urldate = {2021-05-07},
+	publisher = {Springer International Publishing},
+	author = {Bélanger, Alain and Sabourin, Patrick},
+	year = {2017},
+	doi = {10.1007/978-3-319-44663-9},
+}
 
-% \textcolor{blue}{Please enter references in the Harvard style and include a DOI where available, citing them in the text with a number in square brackets, e.g. \\ }
+@misc{government_of_canada_modgen_2009,
+	title = {Modgen and the application {RiskPaths} from the model developer's view},
+	url = {https://www.statcan.gc.ca/eng/microsimulation/modgen/new/chap4/chap4},
+	abstract = {Introduction The Modgen programming environment Basic Modgen concepts Organization of files...},
+	language = {eng},
+	urldate = {2021-05-07},
+	author = {Government of Canada, Statistics Canada},
+	month = sep,
+	year = {2009},
+}
 
-[1] MODGEN website, \href{https://www.statcan.gc.ca/eng/microsimulation/modgen/modgen}{https://www.statcan.gc.ca/eng/microsimulation/modgen/modgen}
+@misc{government_of_canada_general_2009,
+	title = {General characteristics of {Modgen} applications--exploring the model {RiskPaths}},
+	url = {https://www.statcan.gc.ca/eng/microsimulation/modgen/new/chap3/chap3},
+	abstract = {Introduction RiskPaths: The underlying statistical models Desired features of a RiskPaths microsimulation model Exploring the Modgen application RiskPaths...},
+	language = {eng},
+	urldate = {2021-05-07},
+	author = {Government of Canada, Statistics Canada},
+	month = sep,
+	year = {2009},
+}
 
-[2] LIAM2 website, \href{https://liam2.plan.be/}{https://liam2.plan.be/}
+@misc{smith_neworder_nodate,
+	title = {neworder},
+	url = {https://neworder.readthedocs.io/en/stable/},
+	urldate = {2021-05-07},
+	author = {Smith, Andrew P},
+}
 
-[3] \emph{neworder} documentation, \href{https://neworder.readthedocs.io/en/stable}{https://neworder.readthedocs.io/}
+@misc{liam2_nodate,
+	title = {News — {LIAM2}},
+	url = {https://liam2.plan.be/},
+	urldate = {2021-05-07},
+}
 
-[4] Belanger, A \& Sabourin, P, \emph{Microsimulation and Population Dynamics: An Introduction to Modgen 12}, Springer Series on Demographic Methods and Population Analysis 43, 2017, \href{https://www.microsimulationandpopulationdynamics.com/}{https://www.microsimulationandpopulationdynamics.com/}
+@misc{government_of_canada_modgen_2009-1,
+	title = {Modgen ({Model} generator)},
+	url = {https://www.statcan.gc.ca/eng/microsimulation/modgen/modgen},
+	abstract = {Modgen is a general purpose package used for microsimulation modeling. It has been designed to ease the creation, maintenance, and documentation of such models, as well as to extend their functionality and ease-of-use.},
+	language = {eng},
+	urldate = {2021-05-07},
+	author = {Government of Canada, Statistics Canada},
+	month = sep,
+	year = {2009},
+}
 
-[5] Statistics Canada, \emph{General characteristics of Modgen applications--exploring the model RiskPaths}, \href{https://www.statcan.gc.ca/eng/microsimulation/modgen/new/chap3/chap3}{ttps://www.statcan.gc.ca/eng/microsimulation/modgen/new/chap3/chap3}
-
-[6] Statistics Canada, \emph{Modgen and the application RiskPaths from the model developer's view} \href{https://www.statcan.gc.ca/eng/microsimulation/modgen/new/chap4/chap4}{https://www.statcan.gc.ca/eng/microsimulation/modgen/new/chap4/chap4}
-
-[7] Lewis, P. A. \& Shedler, G. S. (1979), \emph{Simulation of nonhomogeneous Poisson processes by thinning.}, Naval Research Logistics, 26: 403-413. doi:10.1002/nav.3800260304
+@article{lewis_simulation_1979,
+	title = {Simulation of nonhomogeneous poisson processes by thinning},
+	volume = {26},
+	copyright = {Copyright © 1979 Wiley Periodicals, Inc., A Wiley Company},
+	issn = {1931-9193},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/nav.3800260304},
+	doi = {https://doi.org/10.1002/nav.3800260304},
+	abstract = {A simple and relatively efficient method for simulating one-dimensional and two-dimensional nonhomogeneous Poisson processes is presented The method is applicable for any rate function and is based on controlled deletion of points in a Poisson process whose rate function dominates the given rate function In its simplest implementation, the method obviates the need for numerical integration of the rate function, for ordering of points, and for generation of Poisson variates.},
+	language = {en},
+	number = {3},
+	urldate = {2021-05-07},
+	journal = {Naval Research Logistics Quarterly},
+	author = {Lewis, P. a. W. and Shedler, G. S.},
+	year = {1979},
+	pages = {403--413},
+}
