fix some issues with paper; add workflow

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,34 @@
+
+@misc{noauthor_liam2_nodate,
+	title = {{LIAM2} website},
+	url = {https://liam2.plan.be/pages/about.html},
+	urldate = {2021-05-08},
+}
+
+@misc{noauthor_m-o-p-dpolice-supply-demand_2021,
+	title = {M-{O}-{P}-{D}/{Police}-{Supply}-{Demand}},
+	copyright = {MIT License
+        , 
+      
+        MIT License},
+	url = {https://github.com/M-O-P-D/Police-Supply-Demand},
+	abstract = {Repository for Supply ABM for Police Supply and Demand Models},
+	urldate = {2021-05-08},
+	publisher = {M.O.P.D.},
+	month = may,
+	year = {2021},
+	note = {original-date: 2021-03-16T08:56:14Z},
+}
+
+@misc{smith_neworder_2021,
+	title = {neworder},
+	url = {https://neworder.readthedocs.io/en/stable/},
+	urldate = {2021-05-07},
+	journal = {neworder documentation},
+	author = {Smith, Andrew P},
+	year = {2021},
+}
+
 @book{belanger_microsimulation_2017,
 	series = {The {Springer} {Series} on {Demographic} {Methods} and {Population} {Analysis}},
 	title = {Microsimulation and {Population} {Dynamics}: {An} {Introduction} to {Modgen} 12},
@@ -33,19 +64,6 @@
 	author = {Government of Canada, Statistics Canada},
 	month = sep,
 	year = {2009},
-}
-
-@misc{smith_neworder_nodate,
-	title = {neworder},
-	url = {https://neworder.readthedocs.io/en/stable/},
-	urldate = {2021-05-07},
-	author = {Smith, Andrew P},
-}
-
-@misc{liam2_nodate,
-	title = {News — {LIAM2}},
-	url = {https://liam2.plan.be/},
-	urldate = {2021-05-07},
 }
 
 @misc{government_of_canada_modgen_2009-1,
