--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,93 +1,91 @@
 
-@article{lewis_simulation_1979,
-	title = {Simulation of nonhomogeneous poisson processes by thinning},
-	volume = {26},
-	copyright = {Copyright © 1979 Wiley Periodicals, Inc., A Wiley Company},
-	issn = {1931-9193},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/nav.3800260304},
-	doi = {10.1002/nav.3800260304},
-	abstract = {A simple and relatively efficient method for simulating one-dimensional and two-dimensional nonhomogeneous Poisson processes is presented The method is applicable for any rate function and is based on controlled deletion of points in a Poisson process whose rate function dominates the given rate function In its simplest implementation, the method obviates the need for numerical integration of the rate function, for ordering of points, and for generation of Poisson variates.},
-	language = {en},
-	number = {3},
-	urldate = {2021-05-07},
-	journal = {Naval Research Logistics Quarterly},
-	author = {Lewis, P. a. W. and Shedler, G. S.},
-	year = {1979},
-	pages = {403--413},
-}
-
-@misc{birks_m-o-p-dpolice-supply-demand_2021,
-	title = {M-{O}-{P}-{D}/{Police}-{Supply}-{Demand}},
-	copyright = {MIT License},
+@software{birks_m-o-p-dpolice-supply-demand_2021,
+	title = {M-O-P-D/Police-Supply-Demand},
+	rights = {{MIT} License         ,                 {MIT} License},
 	url = {https://github.com/M-O-P-D/Police-Supply-Demand},
-	abstract = {Repository for Supply ABM for Police Supply and Demand Models},
-	urldate = {2021-05-08},
+	abstract = {Repository for Supply {ABM} for Police Supply and Demand Models},
 	publisher = {M.O.P.D.},
 	author = {Birks, Dan and Smith, Andrew P},
-	month = may,
-	year = {2021},
+	urldate = {2021-05-08},
+	date = {2021-05-07},
 	note = {original-date: 2021-03-16T08:56:14Z},
 }
 
-@misc{noauthor_liam2_nodate,
-	title = {{LIAM2} website},
+@online{noauthor_liam2_nodate,
+	title = {{LIAM}2 website},
 	url = {https://liam2.plan.be/pages/about.html},
 	urldate = {2021-05-08},
 }
 
-@misc{smith_neworder_2021,
+@online{smith_neworder_2021,
 	title = {neworder},
 	url = {https://neworder.readthedocs.io/en/stable/},
-	urldate = {2021-05-07},
-	journal = {neworder documentation},
+	titleaddon = {neworder documentation},
 	author = {Smith, Andrew P},
-	year = {2021},
+	urldate = {2021-05-07},
+	date = {2021},
 }
 
 @book{belanger_microsimulation_2017,
-	series = {The {Springer} {Series} on {Demographic} {Methods} and {Population} {Analysis}},
-	title = {Microsimulation and {Population} {Dynamics}: {An} {Introduction} to {Modgen} 12},
-	isbn = {9783319446622},
-	shorttitle = {Microsimulation and {Population} {Dynamics}},
+	title = {Microsimulation and Population Dynamics: An Introduction to Modgen 12},
+	isbn = {978-3-319-44662-2},
 	url = {https://www.springer.com/gp/book/9783319446622},
+	series = {The Springer Series on Demographic Methods and Population Analysis},
+	shorttitle = {Microsimulation and Population Dynamics},
 	abstract = {This book is a practical, step-by-step introduction to microsimulation in demography. It shows how to use Modgen, a powerful and free microsimulation platform built by Statistics Canada. The authors' hands-on explanation of model development will help readers make their own. The book teaches how to create and run a simple cohort model with a single fixed-rate event, and builds upon this concept. It introduces how to develop both a single state life table as well as a multiple increment-decrement life table using the tools provided by Modgen. The authors illustrate how to easily upgrade an existing model by adding new modules and new dimensions as determinants of a risk already modeled. The integration of a fertility module and a base population allows the user to bring new actors into the simulation and transform a cohort-based model into a population-based one. The final addition of an international migration module allows the user to accomplish fully open, multi-regional projections. This accessible introduction will be of interest to researchers and students in population studies and other social sciences. It will also appeal to anyone interested in the computational modeling of population dynamics.},
-	language = {en},
-	urldate = {2021-05-07},
 	publisher = {Springer International Publishing},
 	author = {Bélanger, Alain and Sabourin, Patrick},
-	year = {2017},
+	urldate = {2021-05-07},
+	date = {2017},
+	langid = {english},
 	doi = {10.1007/978-3-319-44663-9},
+	file = {Snapshot:/home/az/Zotero/storage/KACH9B8P/Bélanger and Sabourin - 2017 - Microsimulation and Population Dynamics An Introd.html:text/html},
 }
 
-@misc{government_of_canada_modgen_2009,
+@online{government_of_canada_modgen_2009,
 	title = {Modgen and the application {RiskPaths} from the model developer's view},
 	url = {https://www.statcan.gc.ca/eng/microsimulation/modgen/new/chap4/chap4},
 	abstract = {Introduction The Modgen programming environment Basic Modgen concepts Organization of files...},
-	language = {eng},
-	urldate = {2021-05-07},
 	author = {Government of Canada, Statistics Canada},
-	month = sep,
-	year = {2009},
+	urldate = {2021-05-07},
+	date = {2009-09-30},
+	file = {Snapshot:/home/az/Zotero/storage/5WEC54MN/Government of Canada - 2009 - Modgen and the application RiskPaths from the mode.html:text/html},
 }
 
-@misc{government_of_canada_general_2009,
-	title = {General characteristics of {Modgen} applications--exploring the model {RiskPaths}},
+@online{government_of_canada_general_2009,
+	title = {General characteristics of Modgen applications--exploring the model {RiskPaths}},
 	url = {https://www.statcan.gc.ca/eng/microsimulation/modgen/new/chap3/chap3},
-	abstract = {Introduction RiskPaths: The underlying statistical models Desired features of a RiskPaths microsimulation model Exploring the Modgen application RiskPaths...},
-	language = {eng},
-	urldate = {2021-05-07},
+	abstract = {Introduction {RiskPaths}: The underlying statistical models Desired features of a {RiskPaths} microsimulation model Exploring the Modgen application {RiskPaths}...},
 	author = {Government of Canada, Statistics Canada},
-	month = sep,
-	year = {2009},
+	urldate = {2021-05-07},
+	date = {2009-09-30},
+	file = {Snapshot:/home/az/Zotero/storage/T2SAKVEB/Government of Canada - 2009 - General characteristics of Modgen applications--ex.html:text/html},
 }
 
-@misc{government_of_canada_modgen_2009-1,
-	title = {Modgen ({Model} generator)},
+@online{government_of_canada_modgen_2009-1,
+	title = {Modgen (Model generator)},
 	url = {https://www.statcan.gc.ca/eng/microsimulation/modgen/modgen},
 	abstract = {Modgen is a general purpose package used for microsimulation modeling. It has been designed to ease the creation, maintenance, and documentation of such models, as well as to extend their functionality and ease-of-use.},
-	language = {eng},
-	urldate = {2021-05-07},
 	author = {Government of Canada, Statistics Canada},
-	month = sep,
-	year = {2009},
+	urldate = {2021-05-07},
+	date = {2009-09-30},
+	file = {Snapshot:/home/az/Zotero/storage/DNWPRFKD/Government of Canada - 2009 - Modgen (Model generator).html:text/html},
+}
+
+@article{lewis_simulation_1979,
+	title = {Simulation of nonhomogeneous poisson processes by thinning},
+	volume = {26},
+	rights = {Copyright © 1979 Wiley Periodicals, Inc., A Wiley Company},
+	issn = {1931-9193},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/nav.3800260304},
+	doi = {10.1002/nav.3800260304},
+	abstract = {A simple and relatively efficient method for simulating one-dimensional and two-dimensional nonhomogeneous Poisson processes is presented The method is applicable for any rate function and is based on controlled deletion of points in a Poisson process whose rate function dominates the given rate function In its simplest implementation, the method obviates the need for numerical integration of the rate function, for ordering of points, and for generation of Poisson variates.},
+	pages = {403--413},
+	number = {3},
+	journaltitle = {Naval Research Logistics Quarterly},
+	author = {Lewis, P. a. W. and Shedler, G. S.},
+	urldate = {2021-05-07},
+	date = {1979},
+	langid = {english},
+	file = {Snapshot:/home/az/Zotero/storage/7C75RG2B/Lewis and Shedler - 1979 - Simulation of nonhomogeneous poisson processes by .html:text/html},
 }
